Fixes
Fixed background color changing at different sizes and the misaligned button.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,7 +109,7 @@ input, select, textarea {
 	}
 
 	html, body {
-		background-color: #101010;
+		background-color: #476466;
 		overflow: hidden;
 	}
 
@@ -864,7 +864,7 @@ input, select, textarea {
 		@media screen and (max-width: 980px) {
 
 			#main {
-				background: rgba(255, 255, 255, 0.925);
+				background: #476466; /* Middle size panel color */
 			}
 
 				#main .toggle {
@@ -881,7 +881,7 @@ input, select, textarea {
 				-ms-transition: opacity 0.5s ease, visibility 0.5s;
 				transition: opacity 0.5s ease, visibility 0.5s;
 				width: 100%;
-				background: #fff;
+				background: #476466; /* Mobile background color */
 				text-align: center;
 			}
 
@@ -905,12 +905,59 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		padding: 3em 2.25em 1.75em 2.25em ;
+		padding:  0em 0em 0em 0em; /* original 3em 2.25em 1.75em 2.25em */
 	}
 
 		#header h1 {
 			font-size: 2.25em;
 			font-weight: 700;
+		}
+
+		#header h2 {
+		    outline: none;
+		    font-size: 16px;
+		    padding: 13px 10px;
+		    color: white;
+		    text-align: center;
+		    background-color: #333;
+		    font-family: Arial, Helvetica, sans-serif;
+		    border-bottom: 5px solid grey;
+		    border-radius: 0px;
+		    margin-bottom: 10px;
+
+		}
+
+		#header h2:hover {
+			background-color: grey;
+			border-bottom: 5px solid white;
+		}
+
+		@media screen and (max-width: 1680px) {
+
+			#header h2 {
+				padding: 13px 10px;
+			}
+		}
+
+		@media screen and (max-width: 1280px) {
+
+			#header h2 {
+				padding: 13px 10px;
+			}
+		}
+
+		@media screen and (max-width: 980px) {
+
+			#header h2 {
+				padding: 13px 10px;
+			}
+		}
+
+		@media screen and (max-width: 480px) {
+
+			#header h2 {
+				padding: 13px 10px;
+			}
 		}
 
 /* Footer */
